--- a/app/globals.css
+++ b/app/globals.css
@@ -27,10 +27,11 @@ body {
   font-size: 1rem;
   cursor: pointer;
   text-decoration: none;
+  transition: all 0.3s ease-in-out;
 }
 
 .btn:hover {
-  background-color: #0058b7;
+  background-color: #0d9747;
   color: #fff;
 }
 
